--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
                 <ul class="logos-footer">
                     <li class="product-mint">
                         <button class='logo-btn'>
-                            <img src="/images/mint.svg" alt="mint logo" class="logo-img">
-                            <img src="/images/mint-link.svg" alt="mint text" class="logo-txt">
+                            <img src="images/mint.svg" alt="mint logo" class="logo-img">
+                            <img src="images/mint-link.svg" alt="mint text" class="logo-txt">
                         </button>
                     </li>
                     <li>
                         <button class='logo-btn'>
-                        <img src="/images/quickbooks.svg" alt="quickbooks logo" class="logo-img">
-                        <img src="/images/quickbooks-link.svg" alt="quickbooks text" class="logo-txt1">
+                        <img src="images/quickbooks.svg" alt="quickbooks logo" class="logo-img">
+                        <img src="images/quickbooks-link.svg" alt="quickbooks text" class="logo-txt1">
                     </button>
                     </li>
                     <li>
                         <button class='logo-btn'>
-                            <img src="/images/turbotax.svg" alt="turbotax logo" class="logo-img">
-                            <img src="/images/turbotax-link.svg" alt="turbotax text" class="logo-txt">
+                            <img src="images/turbotax.svg" alt="turbotax logo" class="logo-img">
+                            <img src="images/turbotax-link.svg" alt="turbotax text" class="logo-txt">
                         </button>
                     </li>
                 </ul>
@@ -88,12 +88,12 @@
                         <li class="password-container">
                             <label for="password">Password</label>
                             <input type="password" id="password" name="password" class="password-input">
-                            <img src="/images/unlock.png" alt="unlock" class="logo-img unlock-img">
+                            <img src="images/unlock.png" alt="unlock" class="logo-img unlock-img">
                         </li>
 
                         <li>
                             <button class='submit-btn'>
-                                <img src="/images/lock.png" alt="lock logo" class="logo-img">
+                                <img src="images/lock.png" alt="lock logo" class="logo-img">
                                 Create Account
                             </button>                        
                         </li>
